add image_id into response get all/get my consult
